# ros-piper_tts

./: .gitignore
piper_tts/: CMakeLists.txt  README.md  package.xml  setup.py
piper_tts/config/: default.yaml  models.yaml
piper_tts/launch/: forward_piper_pal.launch  piper_pal.launch
piper_tts/scripts/: direct_piper_tts_pal  forward_piper_tts_pal  piper_tts_pal
piper_tts/src/piper_tts/: piper_tts.py
piper_tts_cfg/: CMakeLists.txt  package.xml
piper_tts_cfg/cfg/: TTS.cfg
