<?xml version="1.0"?>
<package format="2">
  <name>piper_tts_cfg</name>
  <version>0.0.1</version>
  <description>ROS TTS with Piper</description>
  <maintainer email="lruegeme@techfak.uni-bielefeld.de">Leroy Rügemer</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>dynamic_reconfigure</depend>

</package>
